--- a/lab1/Задание_1.ipynb
+++ b/lab1/Задание_1.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "ohUbus7eB5q6",
         "outputId": "307da94b-51f7-410f-afdd-28290f0e89be",
@@ -594,7 +594,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
           "height": 261
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1008,7 +1008,7 @@
           "height": 278
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1390,7 +1390,7 @@
           "height": 300
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1821,7 +1821,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1857,7 +1857,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1893,7 +1893,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1943,7 +1943,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1985,6 +1985,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Категориальные, количественные, порядковые**"
+      ],
+      "metadata": {
+        "id": "h1SSV3LjbduO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##Фильтрация\n",
         "Офильтруйте 3 колонки вашего датасета и выведите результат"
       ],
@@ -1996,8 +2005,7 @@
       "cell_type": "code",
       "source": [
         "#Фильтр колонки 1\n",
-        "df[df[' loan_term']<18]\n",
-        ""
+        "df[df[' loan_term']<18]\n"
       ],
       "metadata": {
         "id": "osXHN71AFr5W",
@@ -2007,7 +2015,7 @@
           "height": 478
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2513,7 +2521,7 @@
           "height": 478
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3019,7 +3027,7 @@
           "height": 444
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3535,7 +3543,7 @@
           "height": 198
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
