Создано с помощью Colaboratory

--- a/lab1/Задание_1.ipynb
+++ b/lab1/Задание_1.ipynb
@@ -56,12 +56,12 @@
       "metadata": {
         "id": "WnSz-AhVEk3h"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "ohUbus7eB5q6",
         "outputId": "05abda4a-8754-407b-db17-d6bd9352fb3e",
@@ -594,7 +594,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,7 +633,7 @@
           "height": 206
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1015,7 +1015,7 @@
           "height": 206
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1397,7 +1397,7 @@
           "height": 300
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1828,7 +1828,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1864,7 +1864,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1900,7 +1900,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1951,7 +1951,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1993,7 +1993,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Категориальные, количественные, порядковые**"
+        "**Категориальные(education), количественные(cibil_score), порядковые(loan_id)**"
       ],
       "metadata": {
         "id": "h1SSV3LjbduO"
